@@ -59,6 +59,7 @@ public final class TablePropertiesAnalyzer {
             .put(stripIndexPrefix(TableParameterInfo.TRANSLOG_SYNC_INTERVAL), TableParameterInfo.TRANSLOG_SYNC_INTERVAL)
             .put(stripIndexPrefix(TableParameterInfo.TRANSLOG_DURABILITY), TableParameterInfo.TRANSLOG_DURABILITY)
             .put(stripIndexPrefix(TableParameterInfo.TOTAL_SHARDS_PER_NODE), TableParameterInfo.TOTAL_SHARDS_PER_NODE)
+            .put(stripIndexPrefix(TableParameterInfo.MAPPING_TOTAL_FIELDS_LIMIT), TableParameterInfo.MAPPING_TOTAL_FIELDS_LIMIT)
             .put(stripIndexPrefix(TableParameterInfo.RECOVERY_INITIAL_SHARDS), TableParameterInfo.RECOVERY_INITIAL_SHARDS)
             .put(stripIndexPrefix(TableParameterInfo.WARMER_ENABLED), TableParameterInfo.WARMER_ENABLED)
             .put(stripIndexPrefix(TableParameterInfo.UNASSIGNED_NODE_LEFT_DELAYED_TIMEOUT), TableParameterInfo.UNASSIGNED_NODE_LEFT_DELAYED_TIMEOUT)
@@ -92,6 +93,7 @@ public final class TablePropertiesAnalyzer {
             .put(TableParameterInfo.TRANSLOG_SYNC_INTERVAL, new SettingsAppliers.TimeSettingsApplier(CrateTableSettings.TRANSLOG_SYNC_INTERVAL))
             .put(TableParameterInfo.TRANSLOG_DURABILITY, new SettingsAppliers.StringSettingsApplier(CrateTableSettings.TRANSLOG_DURABILITY))
             .put(TableParameterInfo.TOTAL_SHARDS_PER_NODE, new SettingsAppliers.IntSettingsApplier(CrateTableSettings.TOTAL_SHARDS_PER_NODE))
+            .put(TableParameterInfo.MAPPING_TOTAL_FIELDS_LIMIT, new SettingsAppliers.IntSettingsApplier(CrateTableSettings.TOTAL_FIELDS_LIMIT))
             .put(TableParameterInfo.RECOVERY_INITIAL_SHARDS, new RecoveryInitialShardsApplier())
             .put(TableParameterInfo.WARMER_ENABLED, new SettingsAppliers.BooleanSettingsApplier(CrateTableSettings.WARMER_ENABLED))
             .put(TableParameterInfo.UNASSIGNED_NODE_LEFT_DELAYED_TIMEOUT, new SettingsAppliers.TimeSettingsApplier(CrateTableSettings.UNASSIGNED_NODE_LEFT_DELAYED_TIMEOUT))
