@@ -35,6 +35,7 @@ public class PartitionsSettingsExpression extends AbstractPartitionsSettingsExpr
 
     private void addChildImplementations() {
         childImplementations.put(PartitionsSettingsBlocksExpression.NAME, new PartitionsSettingsBlocksExpression());
+        childImplementations.put(PartitionSettingsMappingExpression.NAME, new PartitionSettingsMappingExpression());
         childImplementations.put(PartitionsSettingsRoutingExpression.NAME, new PartitionsSettingsRoutingExpression());
         childImplementations.put(PartitionsSettingsRecoveryExpression.NAME, new PartitionsSettingsRecoveryExpression());
         childImplementations.put(PartitionsSettingsWarmerExpression.NAME, new PartitionsSettingsWarmerExpression());
@@ -70,6 +71,24 @@ public class PartitionsSettingsExpression extends AbstractPartitionsSettingsExpr
         }
     }
 
+    static class PartitionSettingsMappingExpression extends AbstractPartitionsSettingsExpression {
+
+        public static final String NAME = "mapping";
+
+        public PartitionSettingsMappingExpression() {
+            childImplementations.put(PartitionSettingsMappingTotalFieldsExpression.NAME, new PartitionSettingsMappingTotalFieldsExpression());
+        }
+    }
+
+    static class PartitionSettingsMappingTotalFieldsExpression extends AbstractPartitionsSettingsExpression {
+
+        public static final String NAME = "total_fields";
+        public static final String LIMIT = "limit";
+
+        public PartitionSettingsMappingTotalFieldsExpression() {
+            childImplementations.put(LIMIT, new PartitionTableParameterExpression(TableParameterInfo.MAPPING_TOTAL_FIELDS_LIMIT));
+        }
+    }
 
     static class PartitionsSettingsBlocksExpression extends AbstractPartitionsSettingsExpression {
 
