@@ -460,7 +460,7 @@ public class InformationSchemaTest extends SQLTransportIntegrationTest {
     @Test
     public void testDefaultColumns() throws Exception {
         execute("select * from information_schema.columns order by table_schema, table_name");
-        assertEquals(416, response.rowCount());
+        assertEquals(422, response.rowCount());
     }
 
     @Test
