@@ -15,6 +15,13 @@ the appropriate section of the docs.
 Breaking Changes
 ================
 
+Changes
+=======
+
+ - Enabled ``mapping.total_fields.limit`` setting for tables in order to be
+   able to increase maximum number of columns higher than the default
+   of ``1000``.
+
 Fixes
 =====
 
